[project]
name = "kasmapi"
version = "0.1.0"
description = "Python API for Kasm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "types-requests>=2.32.4.20250913",
]
