[project]
name = "kasmapi"
version = "0.2.0"
description = "Python API for Kasm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "FIX002",
    "TD002",
    "TD003"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

